--- a/CV.css
+++ b/CV.css
@@ -54,6 +54,10 @@ html {
     border-bottom: 2px #5a5a5a dashed;
 }
 
+.contacts {
+    margin-bottom: 70px;
+}
+
 .contacts-title {
     color: #fff;
     margin-bottom: 13px;
@@ -80,4 +84,33 @@ address {
 
 .fas {
     margin-right: 7px;
+}
+
+.languages {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 40px;
+}
+
+.language {
+    width: 100px;
+    height: 100px;
+    border: 6px solid #5c5c5c;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 30px;
+    margin-right: 30px;
+}
+
+.language-text {
+    text-transform: uppercase;
+    font-size: 11px;
+}
+
+.languages-per {
+    font-size: 15px;
+    font-weight: 600;
 }
