--- a/CV.css
+++ b/CV.css
@@ -14,6 +14,7 @@ html {
     background-color: #eaeaea;
     justify-content: space-between;
     margin: 20px auto;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0);
 }
 
 .profile {
@@ -124,7 +125,9 @@ address {
 }
 
 .resume-wrap {
+    padding: 36px 56px;
     border: 1px solid rgba(168, 168, 168, 0.44);
+    min-height: 100%;
 }
 
 .logo {
