--- a/CV.css
+++ b/CV.css
@@ -175,8 +175,9 @@ address {
 }
 
 .about {
+    padding-bottom: 30px;
+    border-bottom: 1px solid #e0e0e0;
     text-align: center;
-
 }
 
 .name {
