--- a/CV.css
+++ b/CV.css
@@ -215,4 +215,45 @@ address {
     font-size: 16px;
     font-weight: 400;
     border-bottom: 1px solid #e0e0e0;
+    margin-bottom: 37px;
+}
+
+.list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.list-item {
+    position: relative;
+    padding-left: 40px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 2px dashed #ececec;
+}
+
+.list-item:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 3px;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background-color: #000;
+}
+
+.list-item_title {
+    font-size: 11px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+.list-item_date {
+    font-size: 10px;
+    text-transform: uppercase;
+}
+
+.list-item_text {
+    font-size: 10px;
+    color: #777
 }
