--- a/CV.css
+++ b/CV.css
@@ -257,3 +257,56 @@ address {
     font-size: 10px;
     color: #777
 }
+
+.list-item_none-brder {
+    border: none;
+}
+
+.heading_skills {
+    margin-bottom: 48px;
+}
+
+.skills-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.skills-list_item {
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    font-size: 11px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.level {
+    width: 70%;
+    height: 8px;
+    border: 1px solid #39383a;
+    position: relative;
+}
+
+.level:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    background-color: #898989;
+}
+
+.level-90:before {
+    width: 90%;
+}
+
+.level-80:before {
+    width: 80%;
+}
+
+.level-70:before {
+    width: 70%;
+}
+
+.level-60:before {
+    width: 60%;
+}
