--- a/CV.css
+++ b/CV.css
@@ -310,3 +310,23 @@ address {
 .level-60:before {
     width: 60%;
 }
+
+@media(max-width:1024px) {
+    .container {
+        width: 90%;
+    }
+}
+
+@media (max-width:992px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .profile-photo {
+        height: 500px;
+    }
+
+    .lines {
+        display: none;
+    }
+}
