--- a/CV.css
+++ b/CV.css
@@ -330,3 +330,14 @@ address {
         display: none;
     }
 }
+
+@media(max-width: 768px) {
+    .resume-wrap {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media(max-width: 567px) {}
+
+@media(max-width: 480px) {}
