--- a/CV.css
+++ b/CV.css
@@ -332,12 +332,21 @@ address {
 }
 
 @media(max-width: 768px) {
+    .container {
+        width: 80%;
+    }
+
     .resume-wrap {
         padding-left: 20px;
         padding-right: 20px;
     }
 }
 
-@media(max-width: 567px) {}
+@media(max-width: 567px) {
+    .logo-img {
+        width: 50px;
+        height: 50px;
+    }
+}
 
 @media(max-width: 480px) {}
